tests/parser/invalidinput/parseerror2.idp
vocabulary V{
	type X
	type X isa int
}

procedure main(){
	return 1
}
